--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "dasha",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "keypress": "^0.2.1",
+    "readline-sync": "^1.4.9"
+  }
 }
